--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+<html lang="es-MX">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>JavaScript</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class="site-container">
+    <header class="header">
+      <p>Header</p>
+    </header>
+    <main class="main">
+      <p>Main</p>
+    </main>
+    <footer class="footer" outline>
+      <p>Footer</p>
+    </footer>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
